<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Isabel Maniega on 27/07/18 10:56
  ~ Copyright (c) 2018. All rights reserved.
  ~
  ~ Last modified 27/07/18 10:56
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="16dp">

    <ImageView
        android:id="@+id/imagenParab"
        android:layout_width="match_parent"
        android:layout_height="274dp"
        android:src="@drawable/parab1"
        android:contentDescription="@string/vacio"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y"
            android:id="@+id/enunciado1"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:hint="@string/Numero"
            android:gravity="center" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:textStyle="italic"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDark"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/submit" />
</LinearLayout>