<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Isabel Maniega on 27/07/18 10:56
  ~ Copyright (c) 2018. All rights reserved.
  ~
  ~ Last modified 27/07/18 10:56
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="16dp">

    <ImageView
        android:id="@+id/imagenParab"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/pp_directa1"
        android:contentDescription="@string/vacio" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:text="@string/ysin"
                android:layout_marginRight="20dp"
                android:id="@+id/enunciado1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:ems="10"
                    android:hint="@string/Numero"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="0dp"
                    android:id="@+id/enunciado2"/>
                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:ems="10"
                    android:hint="@string/Numero"
                    android:gravity="center" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/enunciado3"
                android:textSize="16sp"
                android:layout_marginRight="8dp"/>

            <EditText
                android:id="@+id/editText3"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:hint="@string/Numero"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="; m="
                android:layout_marginRight="20dp"
                android:id="@+id/enunciado4"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:ems="10"
                    android:hint="@string/Numero"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="0dp"
                    android:id="@+id/enunciado5"/>

                <EditText
                    android:id="@+id/editText5"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:ems="10"
                    android:hint="@string/Numero"
                    android:gravity="center" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="m "
            android:gravity="center"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/editText6"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:hint="@string/mayor"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=" 0"
            android:gravity="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginLeft="12dp"
            android:id="@+id/decreciente_creciente"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center_horizontal">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/ordenada"
        android:gravity="center"
        android:textSize="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=" n= "
            android:gravity="center"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/editText7"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:hint="@string/Numero"
            android:gravity="center" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:textStyle="italic"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDark"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/submit" />
</LinearLayout>